--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ pylint = "*"
 [requires]
 python_version = "3.8"
 
+[packages]
+num2words = "*"
+
 [packages.discord-py]
 extras = [ "voice",]
 version = "*"
